tests/errors/syn_expr_bodied_fun_with_ret_type.kt
// k0 does not accept expression bodied functions; must have block
fun double(x: Int): Int = x * 2